gateway_manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-httproute
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - "nginx.k3s-demo.home.arpa"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 8088
